# waipawama

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
notebooks/: bash.ipynb  bigquery.ipynb  convert_swagger2_openapi3.ipynb  create_dtypes.ipynb  getstarted.ipynb  round_trip.ipynb
tests/: conftest.py  requirements-testing.txt  test_settings.py
waipawama/: __init__.py  api.py  domain_accounting.py  ingestion_template.py  jtl_dag.py  jtl_invoice.py  settings.py  utils.py
waipawama/dag/: bankkonto.py  jtl_paypal.py  taxdoo.py
waipawama/models/: bankkonto.py  jtl_invoice.py  paypal.py  taxdoo.py
waipawama/tests/: test_settings.py
