[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "waipawama"
author = "Florian Benkö"
author-email = "florian.benkoe2@web.de"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
  "pandas >=1.0",
  "pydantic >=1.0"
]

requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
test = [
  "pytest >=2.7.3",
  "pytest-cov",
  "flake8",
]
dev = [
    "autoflake",
    "flake8",
]
