[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "waipawama"
author = "Florian Benkö"
author-email = "florian.benkoe2@web.de"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
    "pandas >=1.0",
    "pydantic >=1.0"
]
